--- a/src/memory_notebook.ipynb
+++ b/src/memory_notebook.ipynb
@@ -20,7 +20,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Building memory using window: 295: 100%|██████████| 296/296 [00:24<00:00, 12.32it/s]\n"
+      "Building memory using window: 0:   0%|          | 0/296 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Invalid similarity method: cosine-similarity.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# drop missing values\u001b[39;00m\n\u001b[1;32m     11\u001b[0m data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mdropna()\n\u001b[0;32m---> 13\u001b[0m memory \u001b[38;5;241m=\u001b[39m run_memory(data\u001b[38;5;241m=\u001b[39mdata,\n\u001b[1;32m     14\u001b[0m                     fix_start\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     15\u001b[0m                     estimation_window\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m12\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m4\u001b[39m,\n\u001b[1;32m     16\u001b[0m                     similarity_method\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcosine-similarity\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     17\u001b[0m                     k_opt_method\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124melbow\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     18\u001b[0m                     clustering_method\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkmeans\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/work/meta-learning-fin/src/learning/functions.py:58\u001b[0m, in \u001b[0;36mrun_memory\u001b[0;34m(data, fix_start, estimation_window, similarity_method, clustering_method, k_opt_method)\u001b[0m\n\u001b[1;32m     55\u001b[0m train_easy \u001b[38;5;241m=\u001b[39m train[train\u001b[38;5;241m.\u001b[39mloc[:, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcluster\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m!=\u001b[39m argmax]\n\u001b[1;32m     57\u001b[0m \u001b[38;5;66;03m# compute clusters for hard days\u001b[39;00m\n\u001b[0;32m---> 58\u001b[0m clusters, _ \u001b[38;5;241m=\u001b[39m clustering\u001b[38;5;241m.\u001b[39mcompute_clusters(data\u001b[38;5;241m=\u001b[39mtrain_hard, method\u001b[38;5;241m=\u001b[39mclustering_method, k\u001b[38;5;241m=\u001b[39mk)\n\u001b[1;32m     59\u001b[0m train_easy[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcluster\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     60\u001b[0m train_hard[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcluster\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m clusters \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "File \u001b[0;32m~/work/meta-learning-fin/src/models/Clustering.py:124\u001b[0m, in \u001b[0;36mClustering.compute_clusters\u001b[0;34m(self, data, method, k, k_opt_method, similarity_method)\u001b[0m\n\u001b[1;32m    122\u001b[0m \u001b[38;5;66;03m# preprocess data\u001b[39;00m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msimilarity_method \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 124\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcompute_similarity(data\u001b[38;5;241m=\u001b[39mdata, method\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msimilarity_method)\n\u001b[1;32m    126\u001b[0m \u001b[38;5;66;03m# check if any default k is provided    \u001b[39;00m\n\u001b[1;32m    127\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m k \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[0;32m~/work/meta-learning-fin/src/models/Similarity.py:30\u001b[0m, in \u001b[0;36mSimilarity.compute_similarity\u001b[0;34m(self, data, method)\u001b[0m\n\u001b[1;32m     28\u001b[0m     similarity \u001b[38;5;241m=\u001b[39m manhattan_distances(data)\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 30\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid similarity method: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmethod\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m similarity\n",
+      "\u001b[0;31mValueError\u001b[0m: Invalid similarity method: cosine-similarity."
      ]
     }
    ],
@@ -40,7 +54,7 @@
     "memory = run_memory(data=data,\n",
     "                    fix_start=True,\n",
     "                    estimation_window=12 * 4,\n",
-    "                    similarity_method=\"cosine-similarity\",\n",
+    "                    similarity_method=\"cosine\",\n",
     "                    k_opt_method=\"elbow\",\n",
     "                    clustering_method=\"kmeans\")"
    ]
