--- a/src/memory_notebook.ipynb
+++ b/src/memory_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,28 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Building memory using window: 0:   0%|          | 0/296 [00:00<?, ?it/s]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Invalid similarity method: cosine-similarity.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# drop missing values\u001b[39;00m\n\u001b[1;32m     11\u001b[0m data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mdropna()\n\u001b[0;32m---> 13\u001b[0m memory \u001b[38;5;241m=\u001b[39m run_memory(data\u001b[38;5;241m=\u001b[39mdata,\n\u001b[1;32m     14\u001b[0m                     fix_start\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     15\u001b[0m                     estimation_window\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m12\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m4\u001b[39m,\n\u001b[1;32m     16\u001b[0m                     similarity_method\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcosine-similarity\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     17\u001b[0m                     k_opt_method\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124melbow\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     18\u001b[0m                     clustering_method\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkmeans\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/work/meta-learning-fin/src/learning/functions.py:58\u001b[0m, in \u001b[0;36mrun_memory\u001b[0;34m(data, fix_start, estimation_window, similarity_method, clustering_method, k_opt_method)\u001b[0m\n\u001b[1;32m     55\u001b[0m train_easy \u001b[38;5;241m=\u001b[39m train[train\u001b[38;5;241m.\u001b[39mloc[:, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcluster\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m!=\u001b[39m argmax]\n\u001b[1;32m     57\u001b[0m \u001b[38;5;66;03m# compute clusters for hard days\u001b[39;00m\n\u001b[0;32m---> 58\u001b[0m clusters, _ \u001b[38;5;241m=\u001b[39m clustering\u001b[38;5;241m.\u001b[39mcompute_clusters(data\u001b[38;5;241m=\u001b[39mtrain_hard, method\u001b[38;5;241m=\u001b[39mclustering_method, k\u001b[38;5;241m=\u001b[39mk)\n\u001b[1;32m     59\u001b[0m train_easy[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcluster\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     60\u001b[0m train_hard[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcluster\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m clusters \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-      "File \u001b[0;32m~/work/meta-learning-fin/src/models/Clustering.py:124\u001b[0m, in \u001b[0;36mClustering.compute_clusters\u001b[0;34m(self, data, method, k, k_opt_method, similarity_method)\u001b[0m\n\u001b[1;32m    122\u001b[0m \u001b[38;5;66;03m# preprocess data\u001b[39;00m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msimilarity_method \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 124\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcompute_similarity(data\u001b[38;5;241m=\u001b[39mdata, method\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msimilarity_method)\n\u001b[1;32m    126\u001b[0m \u001b[38;5;66;03m# check if any default k is provided    \u001b[39;00m\n\u001b[1;32m    127\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m k \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "File \u001b[0;32m~/work/meta-learning-fin/src/models/Similarity.py:30\u001b[0m, in \u001b[0;36mSimilarity.compute_similarity\u001b[0;34m(self, data, method)\u001b[0m\n\u001b[1;32m     28\u001b[0m     similarity \u001b[38;5;241m=\u001b[39m manhattan_distances(data)\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 30\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid similarity method: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmethod\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m similarity\n",
-      "\u001b[0;31mValueError\u001b[0m: Invalid similarity method: cosine-similarity."
+      "Building memory using window: 295: 100%|██████████| 296/296 [00:25<00:00, 11.80it/s]\n"
      ]
     }
    ],
@@ -61,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -74,10 +60,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fbed4267e90>"
+       "<matplotlib.legend.Legend at 0x7fc2f41ff5d0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -118,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -177,12 +163,17 @@
     }
    ],
    "source": [
+    "raw_data = pd.read_csv('data/inputs/fredmd_transf.csv')\n",
+    "raw_data[\"date\"] = pd.to_datetime(raw_data[\"date\"])\n",
+    "raw_data = raw_data.set_index(\"date\")\n",
+    "raw_data = raw_data.dropna()\n",
+    "\n",
     "major_cols = ['RPI', 'UNRATE', 'UMCSENTx', 'FEDFUNDS', 'CPIAUCSL', 'S&P 500']\n",
     "\n",
     "final_clusters = memory['cluster_step295']\n",
     "for i in range(6):\n",
     "    cur_cluster = final_clusters[final_clusters == i]\n",
-    "    fred_data = data.loc[cur_cluster.index]\n",
+    "    fred_data = raw_data.loc[cur_cluster.index]\n",
     "    print(f\"Cluster {i} Statistics:\")\n",
     "    # get average of each column\n",
     "    cur_list = []\n",
@@ -194,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
