--- a/src/memory_notebook.ipynb
+++ b/src/memory_notebook.ipynb
@@ -30,7 +30,7 @@
     }
    ],
    "source": [
-    "from learning.functions import run_memory, compute_transition_matrix\n",
+    "from learning.memory import run_memory, compute_transition_matrix\n",
     "\n",
     "# fix dates\n",
     "data[\"date\"] = pd.to_datetime(data[\"date\"])\n",
