--- a/src/memory_exp.ipynb
+++ b/src/memory_exp.ipynb
@@ -468,11 +468,13 @@
     "# drop missing values\n",
     "data = data.dropna()\n",
     "\n",
-    "memory, all_centroids, all_probs = run_memory(data=data,\n",
-    "                                   fix_start=True,\n",
-    "                                   estimation_window=12 * 4,\n",
-    "                                   k_opt_method=\"elbow\",\n",
-    "                                   clustering_method=\"kmeans\")\n",
+    "memory, all_centroids, all_probs = run_memory(\n",
+    "    data=data,\n",
+    "    fix_start=True,\n",
+    "    estimation_window=12 * 4,\n",
+    "    k_opt_method=\"elbow\",\n",
+    "    clustering_method=\"kmeans\"\n",
+    ")\n",
     "memory"
    ]
   },
