--- a/src/memory_notebook.ipynb
+++ b/src/memory_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Building memory using window: 295: 100%|██████████| 296/296 [00:36<00:00,  8.03it/s]\n"
+      "Building memory using window: 295: 100%|██████████| 296/296 [00:33<00:00,  8.73it/s]\n"
      ]
     }
    ],
@@ -832,9 +832,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/nfs/home/dylans/work/meta-learning-fin/src/memory_notebook.ipynb Cell 14\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bomi/nfs/home/dylans/work/meta-learning-fin/src/memory_notebook.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m transition_test \u001b[39m=\u001b[39m compute_transition_matrix(memory)\n",
+      "File \u001b[0;32m~/work/meta-learning-fin/src/learning/memory.py:125\u001b[0m, in \u001b[0;36mcompute_transition_matrix\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m    123\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcompute_transition_matrix\u001b[39m(data: pd\u001b[39m.\u001b[39mDataFrame):\n\u001b[1;32m    124\u001b[0m     output \u001b[39m=\u001b[39m {}\n\u001b[0;32m--> 125\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(data\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39msize):\n\u001b[1;32m    126\u001b[0m         cur_data \u001b[39m=\u001b[39m data[\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcluster_step\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m]\n\u001b[1;32m    127\u001b[0m         cur_date \u001b[39m=\u001b[39m cur_data\u001b[39m.\u001b[39mdropna()\u001b[39m.\u001b[39mindex[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mstrftime(\u001b[39m\"\u001b[39m\u001b[39m%\u001b[39m\u001b[39mY-\u001b[39m\u001b[39m%\u001b[39m\u001b[39mm-\u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'columns'"
+     ]
+    }
+   ],
    "source": [
     "transition_test = compute_transition_matrix(memory)"
    ]
